--- a/tmux.conf
+++ b/tmux.conf
@@ -8,6 +8,20 @@ bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
 
+# Set the control character to Ctrl+Spacebar (instead of Ctrl+B)
+set -g prefix C-space
+unbind-key C-b
+bind-key C-space send-prefix
+
+# Set new panes to open in current directory
+bind c new-window -c "#{pane_current_path}"
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+
+# Set the base index for windows to 1 instead of 0
+set -g base-index 1
+setw -g pane-base-index 1
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
